--- a/styles/style.css
+++ b/styles/style.css
@@ -202,21 +202,22 @@ template {
   display: none;
 }
 
-header {
-  background-image: url("../assets/header-home.jpg");
-  background-size: contain;
-  height: 90vh;
-  display: block;
-  background-repeat: no-repeat;
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
-header img {
-  scale: 0.9;
-  position: relative;
-  left: -50px;
-  top: -40px;
-}
-
+/* font-family: 'Kumar One Outline', cursive;
+	font-family: 'Lato', sans-serif; */
 nav li {
   display: inline;
   list-style: none;
@@ -246,17 +247,18 @@ nav li:hover {
   border-bottom: 2px solid #F8FB05;
 }
 
-/* font-family: 'Kumar One Outline', cursive;
-	font-family: 'Lato', sans-serif; */
-h1 {
-  font-family: 'Kumar One Outline', cursive;
-  font-size: 6.8rem;
-  color: black;
-  line-height: 6.4rem;
-  font-weight: normal;
-  width: 100px;
-  margin-left: 260px;
-  text-transform: uppercase;
+footer {
+  height: auto;
+  width: 100%;
+  background-color: black;
+}
+
+footer p {
+  font-family: 'Lato', sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  padding: 10px;
+  color: white;
 }
 
 .wrapper {
@@ -266,4 +268,30 @@ h1 {
 
 html {
   font-size: 62.5%;
+}
+
+header {
+  background-image: url("../assets/header-home.jpg");
+  background-size: contain;
+  height: 90vh;
+  display: block;
+  background-repeat: no-repeat;
+}
+
+header img {
+  scale: 0.9;
+  position: relative;
+  left: -50px;
+  top: -40px;
+}
+
+h1 {
+  font-family: 'Kumar One Outline', cursive;
+  font-size: 6.8rem;
+  color: black;
+  line-height: 6.4rem;
+  font-weight: normal;
+  width: 100px;
+  margin-left: 260px;
+  text-transform: uppercase;
 }
