--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,7 @@ footer p {
 
 html {
   font-size: 62.5%;
+  background-color: #f5f5f5;
 }
 
 header {
@@ -294,4 +295,61 @@ h1 {
   width: 100px;
   margin-left: 260px;
   text-transform: uppercase;
+}
+
+.discover {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 200px;
+  padding-bottom: 100px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.discover-text {
+  text-align: left;
+}
+
+.discover-text h2 {
+  font-family: 'Kumar One', cursive;
+  font-size: 2.3rem;
+  line-height: 58px;
+  letter-spacing: 2.1px;
+  text-transform: uppercase;
+}
+
+.discover-text p {
+  width: 650px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 25px;
+}
+
+.discover-button {
+  font-family: 'Kumar One', cursive;
+  font-size: 2rem;
+  letter-spacing: 1px;
+  line-height: 32px;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+
+.discover-button a {
+  background-color: #065635;
+  font-family: 'Kumar One', cursive;
+  color: white;
+  text-decoration: none;
+  padding: 6px;
+}
+
+.discover img {
+  scale: 0.8;
+  -webkit-box-shadow: -20px 20px 0 #ff0;
+          box-shadow: -20px 20px 0 #ff0;
 }
