--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -8,15 +8,14 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 @import "navigation";
 @import "footer";
 
-.wrapper {
+/*.wrapper {
     width: 80%;
 	margin: 0 auto;
 	
-}
+} */
 
 html {
 	font-size: 62.5%;
-	background-color: #f5f5f5;
 }
 
 // MAIN HEADER
@@ -53,7 +52,8 @@ h1 {
 	display: flex;
 	padding-top: 200px;
 	padding-bottom: 100px;
-	justify-content: space-between;
+	justify-content: space-evenly;
+    background-color: #f5f5f5;
 }
 
 .discover-text {
@@ -99,4 +99,19 @@ h1 {
 .discover img {
 	scale: 0.8;
 	box-shadow: -20px 20px 0 #ff0;
+}
+
+/*GALLERY SECTION*/
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    background-color: #E0FDDF;
+    padding: 100px 0 100px;
+}
+
+.gallery img {
+    display: inline-block;
+    scale: 0.9;
 }
