--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -115,3 +115,68 @@ h1 {
     display: inline-block;
     scale: 0.8;
 }
+
+.about {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    gap: 30px;
+    background-color: #f5f5f5;
+    padding: 100px;
+}
+
+
+
+.customized-offers::before {
+    font-family: "FontAwesome";
+   content: '\f0c0'; 
+   font-size: 20px;
+   border-radius: 50%;
+   background-color: #ff0;
+   border: 10px solid #ff0;
+}
+
+.community::before {
+    font-family: "FontAwesome";
+   content: '\f0c0'; 
+   font-size: 20px;
+   border-radius: 50%;
+   background-color: #ff0;
+   border: 10px solid #ff0;
+}
+
+.blog::before {
+    font-family: "FontAwesome";
+   content: '\f0c0'; 
+   font-size: 20px;
+   border-radius: 50%;
+   background-color: #ff0;
+   border: 10px solid #ff0;
+}
+
+.get-in-touch::before {
+    font-family: "FontAwesome";
+   content: '\f0c0'; 
+   font-size: 20px;
+   border-radius: 50%;
+   background-color: #ff0;
+   border: 10px solid #ff0;
+}
+
+.about h2 {
+    font-family: 'Kumar One', cursive;
+	font-size: 2.3rem;
+	line-height: 58px;
+	letter-spacing: 2.1px;
+	text-transform: uppercase;
+}
+
+.about p {
+    width: 650px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 100;
+	font-size: 1.6rem;
+	line-height: 25px;  
+}
+
+
