--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,10 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 header {
   background-image: url("../assets/header-home.jpg");
   background-size: contain;
@@ -380,7 +384,7 @@ h1 {
       grid-template-columns: 50% 50%;
   -ms-grid-rows: 50% 50%;
       grid-template-rows: 50% 50%;
-  gap: 30px;
+  gap: 0;
   background-color: #f5f5f5;
   padding: 100px;
 }
@@ -429,14 +433,17 @@ h1 {
   line-height: 58px;
   letter-spacing: 2.1px;
   text-transform: uppercase;
+  margin-bottom: 0;
 }
 
 .about p {
-  width: 650px;
+  width: 450px;
   font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 1.6rem;
   line-height: 25px;
+  padding-left: 45px;
+  margin-top: 0;
 }
 
 .learn-more {
@@ -445,51 +452,138 @@ h1 {
   display: grid;
   -ms-grid-columns: 50% 50%;
       grid-template-columns: 50% 50%;
+  -ms-grid-rows: 320px 320px;
+      grid-template-rows: 320px 320px;
 }
 
-.learn-more h2 {
+.programs {
+  width: 450px;
+  margin-left: 15px;
+}
+
+.programs h2 {
   font-family: 'Kumar One', cursive;
   font-size: 2.3rem;
   line-height: 58px;
   letter-spacing: 2.1px;
   text-transform: uppercase;
+  margin-left: 20%;
+  margin-top: 70px;
+  margin-bottom: 0;
 }
 
-.learn-more p {
+.programs p {
   font-family: 'Lato', sans-serif;
   font-weight: 100;
   font-size: 1.6rem;
   line-height: 25px;
+  margin-left: 20%;
+  margin-top: 0;
 }
 
 .left-image {
   -webkit-box-shadow: 20px 20px 0 #ff0;
           box-shadow: 20px 20px 0 #ff0;
   position: relative;
-  bottom: 30px;
+  bottom: 63px;
+  right: 70px;
+  scale: 0.8;
 }
 
 .right-image {
   -webkit-box-shadow: -20px 20px 0 #ff0;
           box-shadow: -20px 20px 0 #ff0;
   position: relative;
-  top: 50px;
-  left: 50px;
+  top: -20px;
+  left: 38px;
+  scale: 0.8;
 }
 
 .location {
-  width: 100%;
   text-align: right;
+  margin-left: 200px;
+  width: 350px;
 }
 
 .location h2 {
-  margin-right: 50px;
+  font-family: 'Kumar One', cursive;
+  font-size: 2.3rem;
+  line-height: 58px;
+  letter-spacing: 2.1px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  margin-top: 70px;
 }
 
 .location p {
-  margin-left: 70px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 25px;
+  margin-top: 0;
 }
 
-.location-button a {
-  margin-left: 77%;
+.location-button {
+  text-align: right;
+}
+
+.style img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: top;
+     object-position: top;
+}
+
+.search {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.style-text {
+  width: 700px;
+  text-align: left;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 25px;
+  margin-top: 0;
+  padding-bottom: 5px;
+}
+
+.style h2 {
+  font-family: 'Kumar One', cursive;
+  font-size: 2.3rem;
+  line-height: 58px;
+  letter-spacing: 2.1px;
+  text-transform: uppercase;
+  padding-top: 100px;
+  margin: 0;
+}
+
+.style .button {
+  margin-bottom: 100px;
+  font-size: 1.5rem;
+}
+
+.style a {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+footer p {
+  margin-bottom: 0;
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  padding-bottom: 10px;
 }
