--- a/styles/style.css
+++ b/styles/style.css
@@ -270,7 +270,7 @@ html, body {
 .blog-header {
   background-image: url("../assets/blog-image.jpg");
   background-size: cover;
-  height: 60vh;
+  height: 80vh;
   display: block;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -296,6 +296,10 @@ html, body {
 .blog-header h1 {
   margin-left: 150px;
   margin-top: 140px;
+}
+
+.blog-content {
+  height: 1150px;
 }
 
 .blog-content h2, h3 {
@@ -391,6 +395,7 @@ html, body {
           align-items: right;
   width: 30%;
   margin-top: 85px;
+  height: auto;
 }
 
 .right-image-container {
@@ -436,6 +441,153 @@ html, body {
 
 .right-content h3:nth-last-of-type(1) {
   padding-top: 0;
+}
+
+.comment-section {
+  background-color: #E0FDDF;
+  padding-left: 120px;
+}
+
+.comment-section h3 {
+  padding-top: 0;
+}
+
+.comment-section-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.comment-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 500px;
+}
+
+.comment-flex p:nth-of-type(odd) {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.comment-flex p:nth-of-type(even) {
+  margin-top: 5px;
+}
+
+.comment-text {
+  padding-left: 20px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 25px;
+}
+
+.comment-flex img {
+  margin-top: 8px;
+}
+
+.comment-flex p:nth-of-type(2) {
+  margin-bottom: 60px;
+}
+
+.user-information {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 200px;
+  background-color: transparent;
+  border-style: none;
+  border-bottom: 1px solid #065635;
+  padding-left: 25px;
+  padding-bottom: 15px;
+  color: black;
+}
+
+textarea {
+  background-color: transparent;
+  border-style: none;
+  border: 1px solid #065635;
+  resize: none;
+  padding-left: 25px;
+  padding-top: 30px;
+  color: #151514;
+}
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: black;
+  letter-spacing: 2px;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: black;
+  letter-spacing: 2px;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+input::-ms-input-placeholder, textarea::-ms-input-placeholder {
+  color: black;
+  letter-spacing: 2px;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+input::placeholder, textarea::placeholder {
+  color: black;
+  letter-spacing: 2px;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+button {
+  background-color: #065635;
+  font-family: 'Kumar One', cursive;
+  color: white;
+  text-decoration: none;
+  border-style: none;
+  padding: 6px;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 500px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 25px;
+  text-transform: uppercase;
+  padding-bottom: 60px;
+}
+
+.blog-footer p {
+  margin: 0;
 }
 
 /*.wrapper {
