contact page completed

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -8,6 +8,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 @import "navigation";
 @import "footer";
 @import "blog";
+@import "contact";
 
 /*.wrapper {
     width: 80%;
