--- a/styles/style.css
+++ b/styles/style.css
@@ -261,12 +261,6 @@ footer p {
   color: white;
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 .blog-header {
   background-image: url("../assets/blog-image.jpg");
   background-size: cover;
@@ -588,6 +582,96 @@ form {
 
 .blog-footer p {
   margin: 0;
+}
+
+.contact-header {
+  background-image: url("../assets/contact-image.jpg");
+  background-size: cover;
+  height: 50vh;
+  display: block;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.header-logo {
+  font-family: 'Kumar One', cursive;
+  font-size: 2.2rem;
+  line-height: 24px;
+  letter-spacing: 1.2px;
+  margin: 0;
+  text-transform: uppercase;
+  width: 100px;
+  margin-left: 150px;
+  padding-top: 20px;
+  position: absolute;
+}
+
+.contact-header h1 {
+  margin-left: 150px;
+  margin-top: 140px;
+  width: auto;
+}
+
+.contact-form {
+  background-color: white;
+  position: relative;
+  top: -100px;
+  left: 150px;
+  height: 400px;
+  width: 650px;
+  padding: 50px;
+  padding-bottom: 0;
+  -webkit-box-shadow: 20px 20px 0 #ff0;
+          box-shadow: 20px 20px 0 #ff0;
+}
+
+.contact-form input {
+  width: 270px;
+}
+
+.contact-form textarea {
+  margin: 30px 0 30px;
+}
+
+.contact-section {
+  background-color: #e0fddf;
+  height: auto;
+  padding-bottom: 20px;
+}
+
+.contact-form button {
+  padding: 12px 0 10px;
+  margin-bottom: 30px;
+}
+
+.social-contact a {
+  text-decoration: none;
+}
+
+.social-contact i {
+  font-size: 20px;
+  color: #065635;
+  padding: 9px;
+}
+
+.social-contact i:first-of-type {
+  padding-left: 0;
+}
+
+.social-contact {
+  position: relative;
+  top: -350px;
+  left: 73%;
+  width: 160px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  font-size: 1.6rem;
+  line-height: 10px;
+  margin-top: 0;
+}
+
+.social-email {
+  padding-bottom: 8px;
 }
 
 /*.wrapper {
