--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -29,9 +29,10 @@ body {
 header {
 	background-image: url("../assets/header-home.jpg");
 	background-size: contain ;
-	height: 90vh;
+	height: 100vh;
 	display: block;
 	background-repeat: no-repeat;
+	background-color: #f5f5f5;
 }
 
 header img {
@@ -56,7 +57,6 @@ h1 {
 
 .discover {
 	display: flex;
-	padding-top: 200px;
 	padding-bottom: 100px;
 	justify-content: space-evenly;
     background-color: #f5f5f5;
@@ -72,6 +72,7 @@ h1 {
 	line-height: 58px;
 	letter-spacing: 2.1px;
 	text-transform: uppercase;
+
 }
 
 .discover-text p {
