--- a/styles/style.css
+++ b/styles/style.css
@@ -236,6 +236,7 @@ nav {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  margin-right: 100px;
 }
 
 nav a {
@@ -243,8 +244,9 @@ nav a {
   color: black;
 }
 
-nav li:hover {
+nav a:hover {
   border-bottom: 2px solid #F8FB05;
+  padding-bottom: 0;
 }
 
 footer {
@@ -690,9 +692,10 @@ body {
 header {
   background-image: url("../assets/header-home.jpg");
   background-size: contain;
-  height: 90vh;
+  height: 100vh;
   display: block;
   background-repeat: no-repeat;
+  background-color: #f5f5f5;
 }
 
 header img {
@@ -717,7 +720,6 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 200px;
   padding-bottom: 100px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
