--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -57,6 +57,7 @@ h1 {
 
 .discover {
 	display: flex;
+	padding-top: 175px;
 	padding-bottom: 100px;
 	justify-content: space-evenly;
     background-color: #f5f5f5;
@@ -112,15 +113,18 @@ h1 {
 
 .gallery {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: nowrap;
     background-color: #E0FDDF;
-    padding: 100px 0 100px;
+    padding: 200px 60px;
+	margin: 0;
 }
 
 .gallery img {
     display: inline-block;
-    scale: 0.8;
+    //height: 300;
+	//width: 300;
+	object-fit: contain;
 }
 
 // ABOUT SECTION
