--- a/styles/style.css
+++ b/styles/style.css
@@ -720,6 +720,7 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-top: 175px;
   padding-bottom: 100px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
@@ -778,18 +779,19 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   background-color: #E0FDDF;
-  padding: 100px 0 100px;
+  padding: 200px 60px;
+  margin: 0;
 }
 
 .gallery img {
   display: inline-block;
-  scale: 0.8;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .about {
