--- a/styles/style.css
+++ b/styles/style.css
@@ -784,7 +784,7 @@ h1 {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   background-color: #E0FDDF;
-  padding: 200px 60px;
+  padding: 200px 168px;
   margin: 0;
 }
 
@@ -792,6 +792,7 @@ h1 {
   display: inline-block;
   -o-object-fit: contain;
      object-fit: contain;
+  max-width: 325px;
 }
 
 .about {
@@ -810,9 +811,18 @@ h1 {
   font-family: "FontAwesome";
   content: '\f015';
   font-size: 20px;
-  border-radius: 50%;
+}
+
+.customized-offers::after {
+  font-family: "FontAwesome";
+  content: '\f111';
+  font-size: 20px;
+  color: #ff0;
+  position: relative;
+  top: 8px;
+  left: -362px;
   background-color: #ff0;
-  border: 10px solid #ff0;
+  border-radius: 50%;
 }
 
 .community::before {
