--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -116,7 +116,7 @@ h1 {
     justify-content: space-around;
     flex-wrap: nowrap;
     background-color: #E0FDDF;
-    padding: 200px 168px;
+    padding: 200px 115px;
 	margin: 0;
 }
 
@@ -134,7 +134,7 @@ h1 {
     grid-template-rows: 50% 50%;
     gap: 0;
     background-color: #f5f5f5;
-    padding: 100px;
+    padding: 100px 200px;
 }
 
 
@@ -207,6 +207,7 @@ h1 {
 	letter-spacing: 2.1px;
 	text-transform: uppercase;
 	margin-bottom: 0;
+	width: 400px;
 }
 
 .about p {
@@ -218,6 +219,7 @@ h1 {
 	padding-left: 50px;
 	margin-top: 0;
 }
+
 
 // LEARN MORE SECTION
 
