--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -133,9 +133,9 @@ h1 {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
-    gap: 0;
+    gap: 50px;
     background-color: #f5f5f5;
-    padding: 100px 200px;
+    padding: 100px 100px;
 }
 
 
