contact page edit

--- a/styles/style.css
+++ b/styles/style.css
@@ -628,7 +628,7 @@ form {
 }
 
 .contact-form input {
-  width: 270px;
+  width: 240px;
 }
 
 .contact-form textarea {
@@ -1041,6 +1041,10 @@ footer p {
   }
   nav ul {
     padding: 0;
+  }
+  nav a:hover {
+    border-bottom: 2px solid #F8FB05;
+    padding-bottom: 0;
   }
   header {
     height: 30vh;
