--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -390,6 +390,12 @@ nav ul {
 	padding: 0;
 }
 
+nav a:hover {
+	border-bottom: 2px solid #F8FB05;
+	padding-bottom: 0;
+}
+
+
 header {
 	height: 30vh;
 }
