--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -367,6 +367,8 @@ footer p{
 $breakpoint-tablet: 768px;
 @media (max-width: $breakpoint-tablet) {
 
+//HEADER
+
 body {
 	overflow-x: hidden;
 }	
@@ -409,6 +411,8 @@ h1 {
 	width: auto;
 }
 
+//DISCOVER SECTION 
+
 .discover {
 	padding-top: 20px;
 	flex-direction: column;
@@ -437,6 +441,8 @@ h1 {
 	padding-bottom: 50px;
 }
 
+//GALLERY SECTION 
+
 .gallery img:last-of-type {
 	display: none;
 }
@@ -461,6 +467,8 @@ h1 {
 .about h2 {
 	font-size: 1.5rem;
 }
+
+//LEARN MORE SECTION
 
 .learn-more {
 	display: flex;
@@ -526,6 +534,8 @@ h1 {
 	box-shadow: none;
 	}
 
+//STYLES SECTION
+
 .style {
 	display: flex;
 	flex-direction: column-reverse;
@@ -544,6 +554,115 @@ h1 {
 	width: 90%;
 	text-align: center;
 }
+
+//BLOG SECTION
+
+.header-logo {
+	text-align: center;
+	padding-top: 70px;
+	width: 100%;
+	margin: 0;
+}
+
+.blog-header {
+	background-size: contain;
+	background-position: center;
+	width: 100%;
+	height: 100%;
+}
+.blog-header h1 {
+	margin: 0;
+	width: 100%;
+	padding: 100px 0;
+	position: relative;
+	top: 90px;
+	
+}
+
+.blog-content {
+	margin-bottom: 500px;
+}
+
+.blog-content-container {
+    flex-direction: column;
+    justify-content: space-between;
+	//height: auto;
+}
+
+.left-content, .right-content {
+	width: 100%;
+}
+
+.left-content, .left-content-container {
+	position: static;
+}
+
+.left-content {
+	box-shadow: none;
+	border-bottom: 20px solid #ff0;
+}
+
+.left-content-text {
+	padding: 0;
+	width: 90%;
+	margin: 0 auto;
+}
+
+.left-content-text h2 {
+	text-align: center;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.content-date {
+	margin: 0 60px;
+	width: 100%;
+	padding-bottom: 20px;
+}
+
+.right-content {
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+	margin-top: 0;
+	align-content: center;
+	padding-bottom: 30px;
+}
+
+.right-content h3 {
+	padding: 0;
+}
+
+.right-content-text {
+    padding: 10px 0 30px;
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.right-content-text p {
+	width: 80%;
+	margin: 0 auto;
+}
+
+.right-content-text ul {
+	width: 50%;
+	margin: 0 auto;
+	text-align: left;
+}
+
+.right-image-container {
+	display: none;
+}
+
+
+//COMMENT SECTION 
+
+.comment-section {
+	margin: 0;
+}
+
+//FOOTER
 
 footer p {
 	margin-top: 0;
