--- a/styles/style.css
+++ b/styles/style.css
@@ -1194,9 +1194,8 @@ footer p {
   }
   .header-logo {
     text-align: center;
-    padding-top: 70px;
     width: 100%;
-    margin: 0;
+    margin: 40px auto 0;
   }
   .blog-header {
     background-size: contain;
@@ -1209,10 +1208,10 @@ footer p {
     width: 100%;
     padding: 100px 0;
     position: relative;
-    top: 90px;
+    top: 100px;
   }
   .blog-content {
-    margin-bottom: 500px;
+    height: auto;
   }
   .blog-content-container {
     -webkit-box-orient: vertical;
@@ -1285,6 +1284,38 @@ footer p {
   }
   .comment-section {
     margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+  .comment-section h3 {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  .comment-flex {
+    width: 80%;
+    margin: 0 auto;
+  }
+  form {
+    width: 80%;
+    margin: 0 auto;
+  }
+  input {
+    width: 140px;
+    padding-left: 10px;
+  }
+  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+    font-size: 1.3rem;
+  }
+  input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+    font-size: 1.3rem;
+  }
+  input::-ms-input-placeholder, textarea::-ms-input-placeholder {
+    font-size: 1.3rem;
+  }
+  input::placeholder, textarea::placeholder {
+    font-size: 1.3rem;
   }
   footer p {
     margin-top: 0;
