--- a/styles/style.css
+++ b/styles/style.css
@@ -1097,9 +1097,8 @@ footer p {
   }
   .about {
     padding: 0;
-    -ms-grid-columns: 100%;
-        grid-template-columns: 100%;
-    padding-left: 50px;
+    -ms-grid-columns: 80%;
+        grid-template-columns: 80%;
     padding-top: 50px;
     padding-bottom: 50px;
   }
@@ -1124,6 +1123,7 @@ footer p {
   }
   .programs {
     width: 100%;
+    margin: 0;
   }
   .programs h2 {
     margin: 0 auto;
@@ -1318,12 +1318,41 @@ footer p {
   input::placeholder, textarea::placeholder {
     font-size: 1.3rem;
   }
+  .contact-section {
+    padding-top: 30px;
+  }
+  .contact-header {
+    height: 30vh;
+  }
   .contact-header h1 {
     margin: 0;
     width: 100%;
-    padding: 100px 0;
+    padding: 60px 0;
     position: relative;
     top: 0;
+  }
+  .contact-form {
+    position: static;
+    width: 70%;
+  }
+  .contact-form input {
+    width: 150px;
+    padding-left: 10px;
+  }
+  .social-contact {
+    position: -webkit-sticky;
+    position: sticky;
+    width: 50%;
+    margin: 20px auto;
+    text-align: center;
+  }
+  .social-contact i {
+    padding: 10px 25px;
+    margin: 0 15px;
+    display: inline-block;
+  }
+  .social-contact p {
+    margin: 10px 20px;
   }
   footer p {
     margin-top: 0;
