contact form mobile

--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -35,7 +35,7 @@
     width: 550px;
     padding: 50px;
     padding-bottom: 0;
-    box-shadow: 20px 20px 0 #ff0;
+    box-shadow: 20px 20px 0 #F8FB05;
 }
 
 .contact-form input {
