--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -2,7 +2,6 @@
     background-image: url("../assets/blog-image.jpg");
 	background-size: cover ;
 	height: 80vh;
-    //width: 100%;
 	display: block;
 	background-repeat: no-repeat;
     background-position: bottom;
@@ -86,8 +85,7 @@
 .left-content {
     width: 60%;
     background-color: white;
-    //padding-right: 20px;
-    box-shadow: 20px 20px 0 #ff0;
+    box-shadow: 20px 20px 0 #F8FB05;
     position: relative;
     top: -140px;
     
@@ -101,8 +99,8 @@
     width: 100%;
 	height: 100%;
 	object-fit: contain;
-    background-color: #ff0;
-    box-shadow: 0px 20px 0 #ff0;
+    background-color: #F8FB05;
+    box-shadow: 0px 20px 0 #F8FB05;
     padding: 0;
 
 }
@@ -133,15 +131,15 @@
 	object-fit: contain;
     display: block;
     margin-left: auto;
-    background-color: #ff0;
-    box-shadow: -20px 20px 0 #ff0;
+    background-color: #F8FB05;
+    box-shadow: -20px 20px 0 #F8FB05;
 }
 
 .right-content-text {
-    background-color: #ff0;
+    background-color: #F8FB05;
     width: 70%;
     margin-left: auto;
-    box-shadow: -20px 0 0 #ff0;
+    box-shadow: -20px 0 0 #F8FB05;
     padding-bottom: 15px;
 }
 
