--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -107,7 +107,7 @@ h1 {
 
 .discover img {
 	scale: 0.8;
-	box-shadow: -20px 20px 0 #ff0;
+	box-shadow: -20px 20px 0 #F8FB05;
 }
 
 /*GALLERY SECTION*/
@@ -144,9 +144,8 @@ h1 {
    content: '\f015'; 
    //font-size: 20px;
    border-radius: 50%;
-   background-color: #ff0;
+   background-color: #F8FB05;
    display: inline-block;
-   //border: 10px solid #ff0;
    height: 50px;
    width: 50px;
    text-align: center;
@@ -159,11 +158,9 @@ h1 {
 .community::before {
     font-family: "FontAwesome";
    content: '\f0c0'; 
-    //font-size: 20px;
 	border-radius: 50%;
-	background-color: #ff0;
+	background-color: #F8FB05;
 	display: inline-block;
-	//border: 10px solid #ff0;
 	height: 50px;
 	width: 50px;
 	text-align: center;
@@ -173,12 +170,10 @@ h1 {
 
 .blog::before {
     font-family: "FontAwesome";
-   content: '\f15b'; 
-    //font-size: 20px;
+    content: '\f15b'; 
 	border-radius: 50%;
-	background-color: #ff0;
+	background-color: #F8FB05;
 	display: inline-block;
-	//border: 10px solid #ff0;
 	height: 50px;
 	width: 50px;
 	text-align: center;
@@ -188,12 +183,10 @@ h1 {
 
 .get-in-touch::before {
     font-family: "FontAwesome";
-   content: '\f095'; 
-    //font-size: 20px;
+    content: '\f095'; 
 	border-radius: 50%;
-	background-color: #ff0;
+	background-color: #F8FB05;
 	display: inline-block;
-	//border: 10px solid #ff0;
 	height: 50px;
 	width: 50px;
 	text-align: center;
@@ -260,7 +253,7 @@ h1 {
 }
 
 .left-image {
-    box-shadow: 20px 20px 0 #ff0;
+    box-shadow: 20px 20px 0 #F8FB05;
     position: relative;
 	bottom: 63px;
 	right: 70px;
@@ -269,7 +262,7 @@ h1 {
 }
 
 .right-image {
-    box-shadow: -20px 20px 0 #ff0;
+    box-shadow: -20px 20px 0 #F8FB05;
     position: relative;
 	top: -20px;
 	left: 38px;
@@ -277,7 +270,6 @@ h1 {
 }
 
 .location {
-    // width: 100%;
 	text-align: right;
 	margin-left: 200px;
 	width: 350px;
@@ -369,9 +361,10 @@ $breakpoint-tablet: 768px;
 
 //HEADER
 
-body {
-	overflow-x: hidden;
-}	
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
 
 header img {
 	visibility: hidden;
@@ -561,7 +554,6 @@ h1 {
 .header-logo {
 	text-align: center;
 	width: 100%;
-	//margin-top: 70px;
 	margin: 40px auto 0;
 }
 
@@ -587,7 +579,6 @@ h1 {
 .blog-content-container {
     flex-direction: column;
     justify-content: space-between;
-	//height: auto;
 }
 
 .left-content, .right-content {
@@ -600,7 +591,7 @@ h1 {
 
 .left-content {
 	box-shadow: none;
-	border-bottom: 20px solid #ff0;
+	border-bottom: 20px solid #F8FB05;
 }
 
 .left-content-text {
@@ -682,7 +673,6 @@ form {
 
 input { 
 	width: 140px;
-	//padding: 10px;
 	padding-left: 10px;
 	
 }
@@ -712,19 +702,18 @@ input::placeholder, textarea::placeholder {
 
 .contact-form {
 	position: static;
-	width: 70%;
+	width: 50%;
 }
 
 .contact-form input { 
-	width: 150px;
-	//padding: 10px;
+	width: 100px;
 	padding-left: 10px;
 	
 }
 
 .social-contact {
 	position: sticky;
-	width: 50%;
+	width: 80%;
 	margin: 20px auto;
 	text-align: center;
 }
