--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -356,8 +356,8 @@ footer p{
 // MEDIA QUERY - INDEX
 
 
-$breakpoint-tablet: 768px;
-@media (max-width: $breakpoint-tablet) {
+$breakpoint-iphone: 414px;
+@media (max-width: $breakpoint-iphone) {
 
 //HEADER
 
@@ -423,8 +423,12 @@ h1 {
 	margin-left: 45px;
 }
 
+.discover div {
+	width: 100%;
+}
+
 .discover img {
-	margin-left: 30px;
+	margin-left: 50px;
 }
 
 .gallery {
@@ -432,6 +436,7 @@ h1 {
 	justify-content: center;
 	padding: 0;
 	padding-bottom: 50px;
+	width: 100%;
 }
 
 //GALLERY SECTION 
@@ -441,8 +446,8 @@ h1 {
 }
 
 .gallery img {
-	margin-top: 50px;
-	margin-left: 25px;
+	margin: 0 auto;
+	padding-top: 30px;
 }
 
 .about {
@@ -450,6 +455,7 @@ h1 {
 	grid-template-columns: 80%;
 	padding-top: 50px;
 	padding-bottom: 50px;
+	
 }
 
 .about p{
@@ -459,6 +465,7 @@ h1 {
 .about h2 {
 	font-size: 1.5rem;
 	width: 100%;
+	margin: 0 auto;
 }
 
 //LEARN MORE SECTION
@@ -694,7 +701,7 @@ input::placeholder, textarea::placeholder {
 .contact-header h1 {
 	margin: 0;
 	width: 100%;
-	padding: 60px 0;
+	padding: 50px 0;
 	position: relative;
 	top: 0;	
 	
@@ -702,14 +709,20 @@ input::placeholder, textarea::placeholder {
 
 .contact-form {
 	position: static;
-	width: 50%;
+	width: 60%;
+	box-shadow: -10px 10px 0 #F8FB05;
 }
 
 .contact-form input { 
-	width: 100px;
-	padding-left: 10px;
+	width: 47%;
+	padding-left: 0;
 	
 }
+
+input::placeholder, textarea::placeholder {
+    font-size: 1.2rem;
+    
+  }
 
 .social-contact {
 	position: sticky;
