--- a/styles/style.css
+++ b/styles/style.css
@@ -1021,7 +1021,7 @@ footer p {
   padding-bottom: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 414px) {
   html, body {
     max-width: 100% !important;
     overflow-x: hidden !important;
@@ -1075,8 +1075,11 @@ footer p {
     text-align: center;
     margin-left: 45px;
   }
+  .discover div {
+    width: 100%;
+  }
   .discover img {
-    margin-left: 30px;
+    margin-left: 50px;
   }
   .gallery {
     -webkit-box-orient: vertical;
@@ -1088,13 +1091,14 @@ footer p {
             justify-content: center;
     padding: 0;
     padding-bottom: 50px;
+    width: 100%;
   }
   .gallery img:last-of-type {
     display: none;
   }
   .gallery img {
-    margin-top: 50px;
-    margin-left: 25px;
+    margin: 0 auto;
+    padding-top: 30px;
   }
   .about {
     padding: 0;
@@ -1109,6 +1113,7 @@ footer p {
   .about h2 {
     font-size: 1.5rem;
     width: 100%;
+    margin: 0 auto;
   }
   .learn-more {
     display: -webkit-box;
@@ -1328,17 +1333,31 @@ footer p {
   .contact-header h1 {
     margin: 0;
     width: 100%;
-    padding: 60px 0;
+    padding: 50px 0;
     position: relative;
     top: 0;
   }
   .contact-form {
     position: static;
-    width: 50%;
+    width: 60%;
+    -webkit-box-shadow: -10px 10px 0 #F8FB05;
+            box-shadow: -10px 10px 0 #F8FB05;
   }
   .contact-form input {
-    width: 100px;
-    padding-left: 10px;
+    width: 47%;
+    padding-left: 0;
+  }
+  input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+    font-size: 1.2rem;
+  }
+  input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+    font-size: 1.2rem;
+  }
+  input::-ms-input-placeholder, textarea::-ms-input-placeholder {
+    font-size: 1.2rem;
+  }
+  input::placeholder, textarea::placeholder {
+    font-size: 1.2rem;
   }
   .social-contact {
     position: -webkit-sticky;
