--- a/styles/style.css
+++ b/styles/style.css
@@ -1104,6 +1104,8 @@ footer p {
     padding: 0;
     -ms-grid-columns: 80%;
         grid-template-columns: 80%;
+    -ms-grid-rows: 100%;
+        grid-template-rows: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
   }
@@ -1113,7 +1115,7 @@ footer p {
   .about h2 {
     font-size: 1.5rem;
     width: 100%;
-    margin: 0 auto;
+    margin-left: 25%;
   }
   .learn-more {
     display: -webkit-box;
