--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -25,8 +25,9 @@
 }
 
 .blog-header h1 {
-    margin-left: 150px;
-    margin-top: 140px;
+    position: absolute;
+    top: 175px;
+    left: 150px;
 }
 
 //BLOG SECTION
