--- a/styles/sass/_navigation.scss
+++ b/styles/sass/_navigation.scss
@@ -1,30 +1,108 @@
-nav li {
-	display: inline;
-	list-style: none;
-	font-family: 'Lato', sans-serif;
-	font-weight: bold;
-	font-size: 2rem;
-	letter-spacing: .14rem;
-	line-height: 2.9rem;
-	padding: 20px;
-		
+// header {
+// 	position: relative;
+// }
+// .menu-container {
+// 	width: 100%;
+// 	height: 100vh;
+// 	position: absolute;
+// }
+
+.hamburger-menu {
+	position: fixed;
+	top: 15px;
+	right: 20px;
+	font-size: 3rem;
+	z-index: 10;
+	color: black;
+	cursor: pointer;
 }
 
-nav {
+.nav-list {
+	margin: 10px 10px 0 0;
+	padding: 0;
+	width: 300px;
+	height: 240px;
+	background-color: rgba(6, 86, 53, 0.5);
+	position: fixed;
+	top: 0;
+	right: -400px;
+	z-index: 9;
 	display: flex;
-	justify-content: flex-end;
-	margin-right:100px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 0 0 0 90px;
+	box-shadow: -5px 5px 0 #F8FB05;
+	transition: right 0.5s ease-in;
 }
 
+.toggle {
+	right: 0;
+}
+
+nav li {
+	font-size: 2rem;
+	// margin-top: 20px;
+	list-style: none;
+}
+
+nav li:first-of-type {
+	margin-top: 10px;
+}
 
 nav a {
 	text-decoration: none;
-	color: black;
+	color: white;
+	font-family: 'Kumar One', sans-serif;
+	padding: 0 10px;
+	position: relative;
 }
 
-nav a:hover, a:focus, a:active {
-	border-bottom: 2px solid #F8FB05;
-	padding-bottom: 0;
+nav a::after {
+	display: block;
+	content: '';
+	height: 2px;
+	width: 100%;
+	background-color: #F8FB05;
+	bottom: 0;
+	margin-top: 2px;
+	transform: scaleX(0);
+	transition: transform 0.4s ease-in;
 }
+
+nav a:hover::after {
+	transform: scaleX(1);
+	transform-origin: right;
+}
+
+
+// nav li {
+// 	display: inline;
+// 	list-style: none;
+// 	font-family: 'Lato', sans-serif;
+// 	font-weight: bold;
+// 	font-size: 2rem;
+// 	letter-spacing: .14rem;
+// 	line-height: 2.9rem;
+// 	padding: 20px;
+		
+// }
+
+// nav {
+// 	display: flex;
+// 	justify-content: flex-end;
+// 	margin-right:100px;
+// }
+
+
+// nav a {
+// 	text-decoration: none;
+// 	color: black;
+// }
+
+// nav a:hover, a:focus, a:active {
+// 	border-bottom: 2px solid #F8FB05;
+// 	padding-bottom: 0;
+// }
 
 
