--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -34,31 +34,34 @@ header {
 	display: block;
 	background-repeat: no-repeat;
 	background-color: #f5f5f5;
+	position: relative;
 }
 
 header img {
-	scale: 0.9;
-	position: relative;
-	left: -50px;
-	top: -40px;
+	scale: 0.8;
+	position: absolute;
+	left: -90px;
+	top: 170px;
 }
 
 h1 {
 	font-family: 'Kumar One Outline', cursive;
-	font-size: 6.8rem;
+	font-size: 5.8rem;
 	color: black;
-	line-height: 6.4rem;
+	line-height: 5.8rem;
 	font-weight: normal;
 	width: 100px;
-	margin-left: 260px;
 	text-transform: uppercase;
+	position: absolute;
+	left: 240px;
+	top: 50px;
 }
 
 // SECOND SECTION
 
 .discover {
 	display: flex;
-	padding-top: 175px;
+	padding-top: 90px;
 	padding-bottom: 100px;
 	justify-content: space-evenly;
     background-color: #f5f5f5;
@@ -74,6 +77,7 @@ h1 {
 	line-height: 58px;
 	letter-spacing: 2.1px;
 	text-transform: uppercase;
+	margin-bottom: 0;
 
 }
 
